replace  bulk for loops with addAll